--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "docker:build": "docker build --rm -f \"Dockerfile\" -t service-one:latest \".\"",
+    "ngrok:mac": "./bin/ngrok http 3000",
+    "ngrok:win": "./bin/ngrok.exe http 300",
     "lint": "eslint '{src,apps,libs,test}/**/*.ts' --fix",
     "test": "jest",
     "test:watch": "jest --watch",
